environments/my-inventory-dev/apps/app-refarch-eda-store-inventory/services/refarch-eda-store-inventory/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: refarch-eda-store-inventory
    app.kubernetes.io/part-of: app-refarch-eda-store-inventory
  name: refarch-eda-store-inventory
  namespace: my-inventory-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: refarch-eda-store-inventory
      app.kubernetes.io/part-of: app-refarch-eda-store-inventory
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: refarch-eda-store-inventory
        app.kubernetes.io/part-of: app-refarch-eda-store-inventory
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: refarch-eda-store-inventory
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
