environments/my-inventory-dev/apps/app-refarch-eda-store-inventory/services/refarch-eda-store-inventory/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: refarch-eda-store-inventory
    app.kubernetes.io/part-of: app-refarch-eda-store-inventory
  name: refarch-eda-store-inventory
  namespace: my-inventory-dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: refarch-eda-store-inventory
    app.kubernetes.io/part-of: app-refarch-eda-store-inventory
status:
  loadBalancer: {}
